--- a/index.html
+++ b/index.html
@@ -46,9 +46,7 @@
             </li>
 
             <li>
-              <a href="https://twitter.com/Abd_Qaadir" target="_blank"
-                >projects</a
-              >
+              <a href="">projects</a>
             </li>
             <li>
               <a href="https://abdqaadir.hashnode.dev/" target="_blank">blog</a>
