Added Project page

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             </li>
 
             <li>
-              <a href="">projects</a>
+              <a href="./projects/index.html">projects</a>
             </li>
             <li>
               <a href="https://abdqaadir.hashnode.dev/" target="_blank">blog</a>
@@ -132,33 +132,6 @@
                 data-icon="cib:netlify"
                 data-inline="false"
               ></span>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </section>
-
-    <section id="projects" class="container d-none">
-      <div class="row">
-        <div class="col-12 text-center">
-          <h1 class="sub-h1">PROJECTS</h1>
-        </div>
-        <div class="col-12 px-0">
-          <ul class="list-unstyled justify-content-between">
-            <li>
-              Pig game built with HTML, CSS and JavaScript.
-              <a
-                href="https://abdqaadir.github.io/projects/pig%20game/index.html"
-              >
-                Try it out</a
-              >
-            </li>
-            <li>
-              JavaScript Vowelic Game; count the number of vowel occurrence in a
-              word.
-              <a href="https://abdqaadir.github.io/projects/Vowel_Game/index"
-                >here</a
-              >
             </li>
           </ul>
         </div>
