--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
       </div>
     </section>
 
-    <div class="container-fluid" id="loading">
+    <div class="container-fluid d-none" id="loading">
       <div class="row justify-content-center align-items-center">
         <div class="col-10 text-center">
           <img src="./assets/loading.svg" alt="" />
@@ -147,7 +147,7 @@
     </div>
     <!-- <button class="btn btn-primary toggler">Change Vision</button> -->
     <!-- Optional JavaScript -->
-    <script src="https://cdn.jsdelivr.net/npm/typeit@7.0.4/dist/typeit.min.js"></script>
+    <!-- <script src="https://cdn.jsdelivr.net/npm/typeit@7.0.4/dist/typeit.min.js"></script> -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script
       src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
