Edited stamp time for main display

--- a/index.html
+++ b/index.html
@@ -97,20 +97,37 @@
     <main class="container-fluid">
       <div class="row justify-content-around align-items-center" id="main">
         <div class="col-md-8 col-sm-10 col-12">
-          <div data-aos="fade-right" data-aos-duration="5000">
-            <h2 style="color: #fcdab7">Hello, I'm</h2>
-            <h1>Lateef Quadri Olayinka</h1>
-            <p class="pr-md-5">
-              I am a Nigeria based Frontend developer. On a mission to keep
-              developing apps that run on the web.
+          <h2
+            data-aos="fade-right"
+            data-aos-delay="20"
+            data-aos-duration="500"
+            style="color: #fcdab7"
+          >
+            Hello, I'm
+          </h2>
+          <h1
+            data-aos="fade-right"
+            data-aos-delay="100"
+            data-aos-duration="1000"
+          >
+            Lateef Quadri Olayinka
+          </h1>
+          <p
+            data-aos="fade-right"
+            data-aos-delay="50"
+            data-aos-duration="2000"
+            class="pr-md-5"
+          >
+            I am a Nigeria based Frontend developer. On a mission to keep
+            developing apps that run on the web.
 
-              <br />
-              <br />
+            <br />
+            <br />
 
-              Curious to know more? Keep scrolling
-            </p>
-          </div>
-          <button class="btn" data-aos="fade-up">
+            Curious to know more? Keep scrolling
+          </p>
+
+          <button class="btn" data-aos="fade-up" data-aos-duration="2000">
             <a href="#contact"
               >Get in touch <i class="fas fa-arrow-right"></i
             ></a>
