Included summary for all projects

--- a/index.html
+++ b/index.html
@@ -240,10 +240,9 @@
           </h2>
           <h2 class="my-3 d-none d-md-block">Netflix Clone</h2>
           <p class="my-3">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem,
-            assumenda repudiandae, voluptatem amet dolore sit, ipsa accusantium
-            architecto id esse nesciunt quasi ad reiciendis excepturi? Non
-            quisquam perferendis eos obcaecati.
+            A clone version of netflix where you can play movies trailer based
+            on categories. Have you been looking for a movie trailer? I bet it's
+            there. Check it out.
           </p>
 
           <div class="w-100 d-block my-2 text-right">
@@ -294,10 +293,9 @@
           </h2>
           <h2 class="my-3 d-none d-md-block">Countries REST API Data</h2>
           <p class="my-3">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem,
-            assumenda repudiandae, voluptatem amet dolore sit, ipsa accusantium
-            architecto id esse nesciunt quasi ad reiciendis excepturi? Non
-            quisquam perferendis eos obcaecati.
+            This is a challenge from Frontendmentor platform. It's shows
+            Countries data globally. Their flags, region, languages, currency
+            and so on. I'm pretty sure your country is there, check it out.
           </p>
 
           <div class="w-100 d-block my-2 text-right">
@@ -344,10 +342,8 @@
           </h2>
           <h2 class="my-3 d-none d-md-block">Pig Game (Dice)</h2>
           <p class="my-3">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem,
-            assumenda repudiandae, voluptatem amet dolore sit, ipsa accusantium
-            architecto id esse nesciunt quasi ad reiciendis excepturi? Non
-            quisquam perferendis eos obcaecati.
+            This is a multiplayer based dice game built with Vanilla JavaScript.
+            If you're a lover of dice game. Check it out.
           </p>
 
           <div class="w-100 d-block my-2 text-right">
@@ -373,7 +369,7 @@
           class="col-xl-6 col-lg-6 col-md-7 col-sm-6 col-12 project__img"
           data-aos="fade-left"
           data-aos-delay="50"
-          data-aos-duration="1000"
+          data-aos-duration="2000"
         >
           <div class="overlay d-none d-md-block"></div>
           <img src="./assets/mockup-vowelic.png" alt="" class="w-100" />
@@ -382,8 +378,8 @@
         <div
           class="col-xl-4 col-lg-4 col-md-4 col-sm-5 col-12 d-flex align-self-center flex-wrap h-100 order-md-first"
           data-aos="fade-right"
-          data-aos-delay="100"
-          data-aos-duration="1000"
+          data-aos-delay="50"
+          data-aos-duration="2000"
         >
           <h2 class="my-3 d-md-none">
             <span
@@ -394,10 +390,9 @@
           </h2>
           <h2 class="my-3 d-none d-md-block">Vowelic</h2>
           <p class="my-3">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem,
-            assumenda repudiandae, voluptatem amet dolore sit, ipsa accusantium
-            architecto id esse nesciunt quasi ad reiciendis excepturi? Non
-            quisquam perferendis eos obcaecati.
+            A web game wher you are to count the number of vowels in the words
+            displayed. You have 60s at the start of the game which increases as
+            you progress. It also has sound effects. Check it out.
           </p>
 
           <div class="w-100 d-block my-2 text-right">
@@ -423,7 +418,7 @@
           class="col-xl-6 col-lg-6 col-md-7 col-sm-6 col-12 project__img"
           data-aos="fade-right"
           data-aos-delay="50"
-          data-aos-duration="1000"
+          data-aos-duration="2000"
         >
           <div class="overlay d-none d-md-block"></div>
           <img src="./assets/mockup-covid.png" alt="" class="w-100" />
@@ -432,8 +427,8 @@
         <div
           class="col-xl-4 col-lg-4 col-md-4 col-sm-5 col-12 d-flex align-self-center flex-wrap h-100"
           data-aos="fade-left"
-          data-aos-delay="100"
-          data-aos-duration="1000"
+          data-aos-delay="50"
+          data-aos-duration="2000"
         >
           <h2 class="my-3 d-md-none">
             <span
@@ -448,10 +443,11 @@
           </h2>
           <h2 class="my-3 d-none d-md-block">Covid-19 Tracker</h2>
           <p class="my-3">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem,
-            assumenda repudiandae, voluptatem amet dolore sit, ipsa accusantium
-            architecto id esse nesciunt quasi ad reiciendis excepturi? Non
-            quisquam perferendis eos obcaecati.
+            A web app that shows Covid-19 stats throughout the world. It shows
+            the total number of cases, recovered and death in real-time. It also
+            has a section for educating you on the early, mid and late symptoms
+            of Covid-19 and also the preventive measures as stated by the Health
+            Organisations.
           </p>
 
           <div class="w-100 d-block my-2 text-right">
