Added meta tags

--- a/index.html
+++ b/index.html
@@ -7,7 +7,47 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
+    <meta
+      name="”description”"
+      content="This is AbdQaadir's Personal website. A
+    Nigeria based Frontend Developer on a mission to keep building."
+    />
+    <meta property="”og:type”" content="Portfolio" />
 
+    <meta property="og:title" content="Homepage" />
+
+    <meta property="og:description" content="AbdQaadir's Portfolio" />
+
+    <meta
+      property="”og:image”"
+      content="https://avatars1.githubusercontent.com/u/40659739?s=460&u=1cd6278210d8948bcdda4edc8d14aaa0f35e8b38&v=4"
+    />
+
+    <meta property="”og:url”" content="https://abdqaadir.github.io" />
+
+    <meta property="”og:site_name”" content="AbdQaadir's Portfolio" />
+
+    <meta
+      name="twitter:card"
+      content="https://avatars1.githubusercontent.com/u/40659739?s=460&u=1cd6278210d8948bcdda4edc8d14aaa0f35e8b38&v=4"
+    />
+
+    <meta name="”twitter:title”" content="AbdQaadir's Portfolio" />
+
+    <meta
+      name="”twitter:description”"
+      content="This is AbdQaadir's Personal website. A
+      Nigeria based Frontend Developer on a mission to keep building."
+    />
+
+    <meta
+      name="”twitter:image”"
+      content="https://avatars1.githubusercontent.com/u/40659739?s=460&u=1cd6278210d8948bcdda4edc8d14aaa0f35e8b38&v=4"
+    />
+
+    <meta name="”twitter:site”" content="”@Abd_Qaadir" />
+
+    <meta name="”twitter:creator”" content="”@Abd_Qaadir" />
     <!-- Bootstrap CSS -->
     <link
       rel="stylesheet"
