Edited animation delay

--- a/index.html
+++ b/index.html
@@ -139,8 +139,8 @@
         <div class="col-md-8 col-sm-10 col-12">
           <h2
             data-aos="fade-right"
-            data-aos-delay="20"
             data-aos-duration="500"
+            data-aos-easing="ease-in-sine"
             style="color: #fcdab7"
           >
             Hello, I'm
@@ -148,14 +148,16 @@
           <h1
             data-aos="fade-right"
             data-aos-delay="100"
-            data-aos-duration="1000"
+            data-aos-duration="700"
+            data-aos-easing="ease-in-sine"
           >
             Lateef Quadri Olayinka
           </h1>
           <p
             data-aos="fade-right"
             data-aos-delay="50"
-            data-aos-duration="2000"
+            data-aos-duration="1500"
+            data-aos-easing="ease-in-sine"
             class="pr-md-5"
           >
             I am a Nigeria based Frontend developer. On a mission to keep
@@ -167,11 +169,18 @@
             Curious to know more? Keep scrolling
           </p>
 
-          <button class="btn" data-aos="fade-up" data-aos-duration="2000">
-            <a href="#contact"
-              >Get in touch <i class="fas fa-arrow-right"></i
-            ></a>
-          </button>
+          <div
+            data-aos="fade-up"
+            data-aos-easing="ease-in-sine"
+            data-aos-delay="50"
+            data-aos-duration="1200"
+          >
+            <button class="btn">
+              <a href="#contact"
+                >Get in touch <i class="fas fa-arrow-right"></i
+              ></a>
+            </button>
+          </div>
         </div>
       </div>
     </main>
@@ -409,6 +418,8 @@
           class="col-xl-6 col-lg-6 col-md-7 col-sm-6 col-12 project__img"
           data-aos="fade-left"
           data-aos-delay="50"
+          data-aos-easing="ease-in-sine"
+          data-aos-offset="200"
           data-aos-duration="2000"
         >
           <div class="overlay d-none d-md-block"></div>
@@ -420,6 +431,8 @@
           data-aos="fade-right"
           data-aos-delay="50"
           data-aos-duration="2000"
+          data-aos-offset="200"
+          data-aos-easing="ease-in-sine"
         >
           <h2 class="my-3 d-md-none">
             <span
@@ -458,6 +471,8 @@
           class="col-xl-6 col-lg-6 col-md-7 col-sm-6 col-12 project__img"
           data-aos="fade-right"
           data-aos-delay="50"
+          data-aos-easing="ease-in-sine"
+          data-aos-offset="200"
           data-aos-duration="2000"
         >
           <div class="overlay d-none d-md-block"></div>
@@ -468,6 +483,8 @@
           class="col-xl-4 col-lg-4 col-md-4 col-sm-5 col-12 d-flex align-self-center flex-wrap h-100"
           data-aos="fade-left"
           data-aos-delay="50"
+          data-aos-easing="ease-in-sine"
+          data-aos-offset="200"
           data-aos-duration="2000"
         >
           <h2 class="my-3 d-md-none">
