Added contact nav-link

--- a/index.html
+++ b/index.html
@@ -137,6 +137,9 @@
               <a href="#projects">Project</a>
             </li>
             <li>
+              <a href="#contact">Contact</a>
+            </li>
+            <li>
               <a
                 href="https://docs.google.com/document/d/1k3jMqfKybLvLBazE1VrSeDbbMxuXIW27XlwOtKd0o_M/edit?usp=sharing"
                 target="_blank"
