Added stacks to about page and made some changes to the about-me text

--- a/index.html
+++ b/index.html
@@ -220,12 +220,11 @@
       </div>
       <div class="row justify-content-around mt-5">
         <div
-          class="col-xl-6 col-lg-6 col-md-7 col-sm-10 col-12"
+          class="col-xl-4 col-lg-4 col-md-7 col-sm-10 col-12"
           data-aos="fade-up"
         >
           <p>
-            Hi, I'm a Nigeria based **Frontend Developer** with close 2 years
-            experience building Web Interfaces with cross-platform compability,
+            Hi, I'm a Nigeria-based Frontend Developer with good experience building Web Interfaces with cross-platform compability,
             cross-browser responsiveness and of good performance. I have great
             passion for technology and cyber security.
           </p>
@@ -246,7 +245,10 @@
               <li>JavaScript - ES6</li>
               <li>JQuery</li>
               <li>React</li>
+              <li>Hooks</li>
+              <li>Styled Components</li>
               <li>Redux</li>
+              <li>Jest & Enzyme</li>
             </ul>
           </div>
           <div
@@ -261,7 +263,7 @@
               <li>Git - Github</li>
               <li>Netlify</li>
               <li>Vercel</li>
-              <li>Redux</li>
+              <li>Framework7</li>
             </ul>
           </div>
         </div>
