Added Typescript to Stacks

--- a/index.html
+++ b/index.html
@@ -243,11 +243,11 @@
               <li>HTML/CSS</li>
               <li>Bootstrap</li>
               <li>JavaScript - ES6</li>
+              <li>TypeScript</li>
               <li>JQuery</li>
-              <li>React</li>
-              <li>Hooks</li>
+              <li>React (Class & Hooks)</li>
               <li>Styled Components</li>
-              <li>Redux</li>
+              <li>useReducer - Redux</li>
               <li>Jest & Enzyme</li>
             </ul>
           </div>
