Edited About me section

--- a/index.html
+++ b/index.html
@@ -220,13 +220,16 @@
       </div>
       <div class="row justify-content-around mt-5">
         <div
-          class="col-xl-4 col-lg-4 col-md-7 col-sm-10 col-12"
+          class="col-xl-6 col-lg-6 col-md-7 col-sm-10 col-12"
           data-aos="fade-up"
         >
           <p>
-            Hi, I'm a Nigeria-based Frontend Developer with good experience building Web Interfaces with cross-platform compability,
-            cross-browser responsiveness and of good performance. I have great
-            passion for technology and cyber security.
+            Hi, I'm a Nigeria-based Frontend Developer with experience building Web Interfaces with cross-platform compability, responsiveness and of good performance. 
+            <br>
+            <br>
+            I'm always passionate about adding value to my career by gaining real-world experience besides learning fundamental techniques needed to excel in the Software Developement career.
+            <br>
+            I believe I can make an immediate impact on your organization with my unique blend of zeal and passion for continuous learning. Have an Open Position? <a href="mailto:lateef9816@gmail.com"> Hit me up</a>
           </p>
         </div>
         <div
