--- a/jsminna/rest-api/index.html
+++ b/jsminna/rest-api/index.html
@@ -14,7 +14,7 @@
     <header class="container-fluid">
         <div class="row p-3">
             <div class="col-12 text-center">
-                <h1 class="text-responsive font-weight-bold">Coutries Rest API</h1>
+                <h1 class="text-responsive font-weight-bold">Countries Rest API</h1>
             </div>
         </div>
     </header>
