--- a/jsminna/contact_list/index.html
+++ b/jsminna/contact_list/index.html
@@ -26,6 +26,9 @@
     </header>
 
     <main class="container-fluid">
+      <h3 class="text-center p-3 fetching-text">
+          Fetching Data...
+      </h3>
       <div class="row justify-content-center justify-content-md-between px-md-5" id="contact-row">
        
       </div>
