--- a/index.html
+++ b/index.html
@@ -557,7 +557,7 @@
         <div
           class="col-xl-5 col-lg-5 col-md-5 col-sm-10 col-12 connect py-4 p-md-4"
         >
-          <h2>You contact me via:</h2>
+          <h2>You can connect with me via:</h2>
 
           <ul class="list-unstyled d-flex justify-content-center">
             <li>
@@ -597,10 +597,6 @@
       </div>
     </section>
 
-    <!-- <button class="btn btn-primary toggler">Change Vision</button> -->
-    <!-- Optional JavaScript -->
-    <!-- <script src="https://cdn.jsdelivr.net/npm/typeit@7.0.4/dist/typeit.min.js"></script> -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script
       src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
       integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
