Edited main part

--- a/index.html
+++ b/index.html
@@ -159,15 +159,15 @@
     </header>
     <main class="container-fluid">
       <div class="row justify-content-around align-items-center" id="main">
-        <div class="col-md-8 col-sm-10 col-12">
-          <h2
+        <div class="col-md-7 col-sm-10 col-12">
+          <h5
             data-aos="fade-right"
             data-aos-duration="500"
             data-aos-easing="ease-in-sine"
             style="color: #fcdab7"
           >
-            Hello, I'm
-          </h2>
+            Hello, 👋
+          </h5>
           <h1
             data-aos="fade-right"
             data-aos-delay="100"
@@ -183,11 +183,10 @@
             data-aos-easing="ease-in-sine"
             class="pr-md-5"
           >
-            I am a Nigeria based Frontend developer. On a mission to keep
-            developing apps that run on the web.
+          I'm a Frontend Developer with experience building  Ecommerce platforms for clients. I work closely with Product designer and Product Manager in building top notch platforms and also take part in making critical decisions in terms of tools, methods and approach to problems.
 
-            <br />
-            <br />
+          <br><br>
+        
 
             Curious to know more? Keep scrolling
           </p>
@@ -243,14 +242,15 @@
           >
             <h2 class="mt-4 mt-md-0">Core Stacks</h2>
             <ul class="list-unstyled">
-              <li>HTML/CSS</li>
+              <li>HTML</li>
+              <li>CSS/SASS</li>
               <li>Bootstrap</li>
-              <li>JavaScript - ES6</li>
+              <li>JavaScript (ES6)</li>
               <li>TypeScript</li>
               <li>JQuery</li>
               <li>React (Class & Hooks)</li>
               <li>Styled Components</li>
-              <li>useReducer - Redux</li>
+              <li>Redux</li>
               <li>Jest & Enzyme</li>
             </ul>
           </div>
@@ -266,7 +266,7 @@
               <li>Git - Github</li>
               <li>Netlify</li>
               <li>Vercel</li>
-              <li>Framework7</li>
+              <li>Framework7.io</li>
             </ul>
           </div>
         </div>
