--- a/jsminna/js-clock/index.html
+++ b/jsminna/js-clock/index.html
@@ -40,21 +40,21 @@
             <div class="col">
                 <div class="dividend">
                     <p>Current Location</p>
-                    <h3>Europe/London</h3>
+                    <h3 id="location-2"></h3>
                 </div>
                 <div class="dividend">
-                    <p>Day of the Year</p>
-                    <h3>295</h3>
+                    <p>Day of the Week</p>
+                    <h3 id="day-of-week">0</h3>
                 </div>              
             </div>
             <div class="col">
                 <div class="dividend">
-                    <p>Current Location</p>
-                    <h3>5</h3>
+                    <p>Day of the Year</p>
+                    <h3 id="day-of-the-year">00</h3>
                 </div>
                 <div class="dividend">
-                    <p>Day of the Year</p>
-                    <h3>42</h3>
+                    <p>Week Number</p>
+                    <h3 id="week-number">00</h3>
                 </div>
                 
             </div>
@@ -62,5 +62,6 @@
     </section>
 
 <script src="./assets/scripts/script.js"></script>
+
 </body>
 </html>
