Adds overview's content

--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
       content="This is AbdQaadir's Personal website. A
     Nigeria based Frontend Developer on a mission to keep building."
     />
-    <meta property="”og:type”" content="Portfolio" />
+    <meta property="”og:type”" content="Frontend Developer's Portfolio" />
 
-    <meta property="og:title" content="Homepage" />
+    <meta property="og:title" content="Lateef Quadri" />
 
-    <meta property="og:description" content="AbdQaadir's Portfolio" />
+    <meta property="og:description" content="Lateef Quadri is a self-taught Front End Developer and a Cyber Security student from FUT_Akure, Nigeria." />
 
     <meta
       property="”og:image”"
