--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     />
     <meta property="”og:type”" content="Frontend Developer's Portfolio" />
 
-    <meta property="og:title" content="Lateef Quadri" />
+    <meta property="og:title" content="Lateef Quadri: Frontend Developer" />
 
     <meta property="og:description" content="Lateef Quadri is a self-taught Front End Developer and a Cyber Security student from FUT_Akure, Nigeria." />
 
@@ -87,7 +87,7 @@
     ></script>
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
     <link rel="stylesheet" href="./css/style.css" data-target="my-css" />
-    <title>Home</title>
+    <title>Lateef Quadri: Frontend Developer</title>
   </head>
   <body>
     <div class="container-fluid" id="mobile-nav">
