--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@
 
     <meta property="og:title" content="Lateef Quadri: Frontend Developer" />
 
-    <meta property="og:description" content="Lateef Quadri is a self-taught Front End Developer and a Cyber Security student from FUT_Akure, Nigeria." />
+    <meta
+      property="og:description"
+      content="Lateef Quadri is a self-taught Front End Developer and a Cyber Security student from FUT_Akure, Nigeria."
+    />
 
     <meta
       property="”og:image”"
@@ -105,7 +108,12 @@
               <a href="#projects" class="mobile-link">Project</a>
             </li>
             <li>
-              <a href="https://abdqaadir.hashnode.dev" target="_blank" rel="noreferer noopener">Blog</a>
+              <a
+                href="https://abdqaadir.hashnode.dev"
+                target="_blank"
+                rel="noreferer noopener"
+                >Blog</a
+              >
             </li>
             <li>
               <a
@@ -140,14 +148,19 @@
               <a href="#projects">Projects</a>
             </li>
             <li>
-              <a href="https://abdqaadir.hashnode.dev" target="_blank" rel="noreferer noopener">Blog</a>
+              <a
+                href="https://abdqaadir.hashnode.dev"
+                target="_blank"
+                rel="noreferer noopener"
+                >Blog</a
+              >
             </li>
             <li>
               <a href="#contact">Contact</a>
             </li>
             <li>
               <a
-                href="https://docs.google.com/document/d/1k3jMqfKybLvLBazE1VrSeDbbMxuXIW27XlwOtKd0o_M/edit?usp=sharing"
+                href="https://docs.google.com/document/d/1I4TDqj5ewPRgb0aIIQU2vfT2ghmCN012YkFlJpdQZqw/edit?usp=sharing"
                 target="_blank"
                 >Resume</a
               >
@@ -189,10 +202,13 @@
             data-aos-easing="ease-in-sine"
             class="pr-md-5"
           >
-          I'm a Frontend Developer with experience building  Ecommerce platforms for clients. I work closely with Product designer and Product Manager in building top notch platforms and also take part in making critical decisions in terms of tools, methods and approach to problems.
+            I'm a Frontend Developer with experience building Ecommerce
+            platforms for clients. I work closely with Product designer and
+            Product Manager in building top notch platforms and also take part
+            in making critical decisions in terms of tools, methods and approach
+            to problems.
 
-          <br><br>
-        
+            <br /><br />
 
             Curious to know more? Keep scrolling
           </p>
@@ -229,12 +245,18 @@
           data-aos="fade-up"
         >
           <p>
-            Hi, I'm a Nigeria-based Frontend Developer with experience building Web Interfaces with cross-platform compability, responsiveness and of good performance. 
-            <br>
-            <br>
-            I'm always passionate about adding value to my career by gaining real-world experience besides learning fundamental techniques needed to excel in the Software Developement career.
-            <br>
-            I believe I can make an immediate impact on your organization with my unique blend of zeal and passion for continuous learning. Have an Open Position? <a href="mailto:lateef9816@gmail.com"> Hit me up</a>
+            Hi, I'm a Nigeria-based Frontend Developer with experience building
+            Web Interfaces with cross-platform compability, responsiveness and
+            of good performance.
+            <br />
+            <br />
+            I'm always passionate about adding value to my career by gaining
+            real-world experience besides learning fundamental techniques needed
+            to excel in the Software Developement career.
+            <br />
+            I believe I can make an immediate impact on your organization with
+            my unique blend of zeal and passion for continuous learning. Have an
+            Open Position? <a href="mailto:lateef9816@gmail.com"> Hit me up</a>
           </p>
         </div>
         <div
@@ -620,7 +642,7 @@
     ></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.3.4/gsap.min.js"></script>
     <!-- Anime -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/3.2.0/anime.min.js"></script>    
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/3.2.0/anime.min.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="./js/main.js"></script>
   </body>
