--- a/index.html
+++ b/index.html
@@ -202,11 +202,11 @@
             data-aos-easing="ease-in-sine"
             class="pr-md-5"
           >
-            I'm a Frontend Developer with experience building Ecommerce
-            platforms for clients. I work closely with Product designer and
-            Product Manager in building top notch platforms and also take part
-            in making critical decisions in terms of tools, methods and approach
-            to problems.
+            I’m a front-end developer, and I specialize in building web apps
+            that just work across all platforms and browsers with modern tools.
+            I care deeply about building pixel-perfect websites with good user
+            experience. As software development is an always-evolving career;
+            I’m always eager to learn new things and improve my skill set.
 
             <br /><br />
 
@@ -250,9 +250,10 @@
             of good performance.
             <br />
             <br />
-            I'm always passionate about adding value to my career by gaining
-            real-world experience besides learning fundamental techniques needed
-            to excel in the Software Developement career.
+            Having worked with several international and local companies, I have
+            good experience working remotely with international teams which in
+            turn has greatly improved my communication and collaboration skills.
+            <br />
             <br />
             I believe I can make an immediate impact on your organization with
             my unique blend of zeal and passion for continuous learning. Have an
@@ -275,11 +276,10 @@
               <li>Bootstrap</li>
               <li>JavaScript (ES6)</li>
               <li>TypeScript</li>
-              <li>JQuery</li>
-              <li>React (Class & Hooks)</li>
+              <li>React</li>
+              <li>NextJS</li>
               <li>Styled Components</li>
               <li>Redux</li>
-              <li>Jest & Enzyme</li>
             </ul>
           </div>
           <div
@@ -290,7 +290,6 @@
           >
             <h2 class="mt-4 mt-md-0">Others</h2>
             <ul class="list-unstyled">
-              <li>Firebase</li>
               <li>Git - Github</li>
               <li>Netlify</li>
               <li>Vercel</li>
